--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,14 @@
   background-color: lightgreen;
 }
 
+.App__header--h1 {
+  margin: 0;
+}
+
+.App__header--h2 {
+  margin-top: 0.2em;
+}
+
 .App__Segment {
   background-color: rgb(164, 243, 164) !important;
   padding-bottom: 0.5em !important;
