--- a/src/navbar/Navbar.css
+++ b/src/navbar/Navbar.css
@@ -3,10 +3,10 @@
     margin: auto;
 }
 
-.Navbar__Search--container {
+.Navbar__search--container {
     width: 20%;
 }
 
-.Navbar__Search--field {
+.Navbar__search--field {
     width: 100%;
 }
