--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,18 @@
   margin: 1em auto 2em;
 }
 
+.Segment__description--container--2 {
+  width: 30%;
+  float: right;
+  margin: 1em auto 2em;
+}
+
+.Segment__carousel--container--2 {
+  width: 70%;
+  float: left;
+  margin: 1em auto 2em;
+}
+
 .Segment__img--container {
   clear: both;
 }
